# vp6-dec-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build-win.cmd  build.rs
.github/workflows/: rust.yml
src/: bindings.rs  decoder.rs  helpers.c  lib.rs  malloc.rs
src/fakelibc/: README.md  assert.h  errno.h  fcntl.h  impl.c  inttypes.h  math.h  qsort.c  stdio.h  stdlib.h  string.h  time.h  unistd.h
src/fakelibc/sys/: stat.h
